# myWeChat

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindFFmpeg.cmake  FindWebSocketPP.cmake
src/common/: CMakeLists.txt
src/common/include/: FormatFileSize.h  formatTime.h
src/common/include/models/: ChatMessage.h  Contact.h  Conversation.h  ConversationTypes.h  Group.h  GroupMember.h  MediaCache.h  MediaItem.h  Message.h  User.h
src/controller/: CMakeLists.txt
src/controller/include/: AppController.h  LoginAndRegisterController.h
src/controller/include/contactController/: ContactController.h  ContactTreeModel.h
src/controller/include/conversationController/: ChatListModel.h  ConversationController.h  FileCopyProcessor.cpp
src/controller/include/databaseInitializationController/: DatabaseInitializationController.h
src/controller/include/groupController/: GroupController.h
src/controller/include/messageController/: ChatMessagesModel.h  FileCopyProcessor.h  FileCopyTask.h  MessageController.h
src/controller/include/userController/: UserController.h
src/controller/src/: AppController.cpp  LoginAndRegisterController.cpp
src/controller/src/contactController/: ContactController.cpp  ContactTreeModel.cpp
src/controller/src/conversationController/: ChatListModel.cpp  ConversationController.cpp
src/controller/src/databaseInitializationController/: DatabaseInitializationController.cpp
src/controller/src/groupController/: GroupController.cpp
src/controller/src/messageController/: ChatMessagesModel.cpp  FileCopyProcessor.cpp  FileCopyTask.cpp  MessageController.cpp
src/controller/src/userController/: UserController.cpp
src/media/: CMakeLists.txt
src/media/include/: AudioPlayer.h  ImageProcessingTask.h  ImageProcessor.h  MediaResourceManager.h  ThumbnailManager.h  ThumbnailResourceManager.h  VideoProcessingTask.h  VideoProcessor.h
src/media/src/: AudioPlayer.cpp  ImageProcessingTask.cpp  ImageProcessor.cpp  MediaResourceManager.cpp  ThumbnailManager.cpp  ThumbnailResourceManager.cpp  VideoProcessingTask.cpp  VideoProcessor.cpp
src/network/: CMakeLists.txt
src/storage/: CMakeLists.txt
src/storage/include/: ContactTable.h  ConversationTable.h  DataAccessContext.h  DataService.h  DatabaseInitializer.h  DatabaseManager.h  DatabaseSchema.h  DbConnectionManager.h  GroupMemberTable.h  GroupTable.h  MediaCacheTable.h  MessageTable.h  UserTable.h
src/storage/include/databaseTable/: ContactTable.h  ConversationTable.h  GroupMemberTable.h  GroupTable.h  MediaCacheTable.h  MessageTable.h  UserTable.h
src/storage/src/: ContactTable.cpp  ConversationTable.cpp  DataAccessContext.cpp  DataService.cpp  DatabaseInitializer.cpp  DatabaseManager.cpp  DatabaseSchema.cpp  DbConnectionManager.cpp  GroupMemberTable.cpp  GroupTable.cpp  MediaCacheTable.cpp  MessageTable.cpp  UserTable.cpp
src/storage/src/databaseTable/: ContactTable.cpp  ConversationTable.cpp  GroupMemberTable.cpp  GroupTable.cpp  MediaCacheTable.cpp  MessageTable.cpp  UserTable.cpp
src/ui/: CMakeLists.txt
src/ui/include/: AppInitialize.h  AvatarButton.h  CustomListView.h  FormatTime.h  ImgLabel.h  LoginAndRegisterDialog.h  MainApplication.h  MessageTextEdit.h  WeChatWidget.h
src/ui/include/Delegate/: ChatListDelegate.h  ChatMessageDelegate.h  ContactItemDelegate.h  MediaResourceManager.h
src/ui/include/ListView/: ChatListView.h  ChatMessageListView.h  ContactTreeView.h
src/ui/include/chatConversations/: ChatContextMenu.h  ChatMessage.h  ConversationsDelegate.h  ConversationsModel.h  MessageType.h
src/ui/include/chatList/: ChatListDelegate.h  Chatlistmodel.h
src/ui/include/dialogBox/: AddDialog.h  ClickClosePopup.h  CurrentUserInfoDialog.h  FloatingDialog.h  MoreDialog.h  PersonalInfoDialog.h  RightPopover.h  UserInfoWidget.h
src/ui/include/media/: AsyncThumbnailManager.h  CustomGraphicsView.h  MediaDialog.h  ThumbnailDelegate.h  ThumbnailListView.h  ThumbnailPreviewModel.h  VoiceRecordDialog.h
src/ui/res/: icon.qrc
src/ui/src/: AppInitialize.cpp  AvatarButton.cpp  CustomListView.cpp  ImgLabel.cpp  LoginAndRegisterDialog.cpp  LoginAndRegisterDialog.ui  MainApplication.cpp  MessageTextEdit.cpp  WeChatWidget.cpp  WeChatWidget.ui  main.cpp
src/ui/src/Delegate/: ChatListDelegate.cpp  ChatMessageDelegate.cpp  ContactItemDelegate.cpp  MediaResourceManager.cpp
src/ui/src/ListView/: ChatListView.cpp  ChatMessageListView.cpp  ContactTreeView.cpp
src/ui/src/chatConversations/: ChatContextMenu.cpp  ConversationsDelegate.cpp  ConversationsModel.cpp
src/ui/src/chatList/: ChatListDelegate.cpp  ChatListModel.cpp
src/ui/src/dialogBox/: AddDialog.cpp  AddDialog.ui  CurrentUserInfoDialog.cpp  CurrentUserInfoDialog.ui  FloatingDialog.cpp  FloatingDialog.ui  MoreDialog.cpp  MoreDialog.ui  PersonalInfoDialog.cpp  PersonalInfoDialog.ui  RightPopover.cpp  RightPopover.ui  UserInfoWidget.cpp  UserInfoWidget.ui
src/ui/src/media/: AsyncThumbnailManager.cpp  CustomGraphicsView.cpp  MediaDialog.cpp  MediaDialog.ui  ThumbnailDelegate.cpp  ThumbnailListView.cpp  ThumbnailPreviewModel.cpp  VideoPlayer.cpp  VoiceRecordDialog.cpp
test/: CMakeLists.txt  GenerationWorker.cpp  GenerationWorker.h  TestWidget.cpp  TestWidget.h  TestWidget.ui
test/aiClient/: DoubaoAi.cpp
